# media_agent

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MediaAgent.yaml  README.md  container-dev.sh  env.sh  preload.json  rest_test.py  setup.py  sys_helper.py  system_config.yaml
docker/: Dockerfile  Dockerfile.dist  make_image.sh
docker/scripts/: install_ffmpeg.sh
media_agent/: CMakeLists.txt
media_agent/include/: av_misc.hpp  co_runnable.hpp  decoder.hpp  encoder.hpp  http_facade.hpp  media_agent_impl_ff.hpp  media_common.hpp  media_pod.hpp  media_reader.hpp  media_writer.hpp  mediaagent.hpp  meida_transformer.hpp  misc.hpp  pps.hpp  signal.hpp  sps.hpp  transcoder.hpp
media_agent/include/base/: media_source.hpp  media_transformer.hpp
media_agent/include/common/: av_defs.hpp  av_misc.hpp  media_common.hpp
media_agent/include/http_facade/: http_facade.hpp
media_agent/include/readers/: basic_reader.hpp  media_reader.hpp
media_agent/include/transformers/: basic_decoder.hpp  basic_encoder.hpp  media_transformer.hpp  rk_decoder.hpp
media_agent/include/utils/: argparse.hpp  misc.hpp  nocopy.hpp  signals.hpp  simple_executor.hpp  simple_io_executor.hpp
media_agent/include/writers/: basic_writer.hpp
media_agent/source/: av_misc.cpp  basic_decoder.cpp  basic_encoder.cpp  basic_reader.cpp  basic_writer.cpp  co_runnable.cpp  decoder.cpp  encoder.cpp  http_facade.cpp  main.cpp  media_agent_impl_ff.cpp  media_pod.cpp  media_reader.cpp  media_writer.cpp  mediaagent.cpp  meida_transformer.cpp  pps.cpp  rk_decoder.cpp  signal.cpp  sps.cpp  transcoder.cpp
playground/: CMakeLists.txt  main.cpp  media_pod.hpp  pc.h  pc_test.cpp  play_asio.cpp  play_async.cpp  play_coroutine.cpp  play_datachannel.cpp  play_ffmpeg.cpp  play_rkmpp.cpp  play_signal.cpp  play_thirds.cpp  ringbuffer.hpp  rtmp_publisher.cpp  safe_queue.hpp
sources/: agentgstimpl.cpp  agentgstimpl.h  expected.h  gst_wrapper.cpp  gst_wrapper.h  main.cpp  media_common.h  mediaagent.cpp  mediaagent.h  utils.h
test/: ex.cpp  test.py
